add surefire plugin